# pyLDLE2

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  datasets.py  gl_.py  global_reg_.py  global_views_.py  intermed_views_.py  ipge_.py  ldle_.py  local_views_.py  pyproject.toml
docs/: Autogenerate examples visualizations.ipynb  Autogenerate more examples visualizations.ipynb  Autorun examples.ipynb  api.rst  citations.rst  closed_manifolds.rst  closed_manifolds_ldle.rst  closed_manifolds_lpca.rst  closed_manifolds_ltsa.rst  conf.py  disjoint_manifolds.rst  disjoint_manifolds_ldle.rst  disjoint_manifolds_lpca.rst  disjoint_manifolds_ltsa.rst  double_manifolds.rst  doubled_manifolds.rst  examples.rst  index.rst  manifolds_with_boundary.rst  manifolds_with_boundary_ldle.rst  manifolds_with_boundary_lpca.rst  manifolds_with_boundary_ltsa.rst  modules.rst  more_examples.rst  noisy_manifolds.rst  noisy_manifolds_ldle.rst  noisy_manifolds_lpca.rst  noisy_manifolds_ltsa.rst  non_orientable_manifolds.rst  non_orientable_manifolds_ldle.rst  non_orientable_manifolds_lpca.rst  non_orientable_manifolds_ltsa.rst  real_world_examples.rst  real_world_examples_ldle.rst  real_world_examples_lpca.rst  real_world_examples_ltsa.rst  requirements.txt  todo.rst  usage.rst
nbks/: example.ipynb  example_.ipynb  rectangle.ipynb  swiss roll with increasing gaussian noise.ipynb
pyLDLE2/: buml_.py  datasets.py  gl_.py  global_reg_.py  global_views_.py  intermed_views_.py  ipge_.py  l1pca_optimal_.py  ldle_.py  local_views_.py  (+4 more)
pyLDLE2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+133 files in other folders)
