[tool.setuptools]
packages = ["pyLDLE2"]

[build-system]
requires = ["setuptools>=61.2",
            "matplotlib==3.5.1",
            "multiprocess==0.70.13",
            "numpy==1.21.5",
            "Pillow==9.0.1",
            "nbsphinx",
            "ipykernel",
            "pandas==1.4.2",
            "scikit_learn==1.0.2",
            "scipy==1.7.3",
            "scs==3.2.0",
            "seaborn==0.11.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyLDLE2"
version = "0.1.8"
authors = [
  { name="Dhruv Kohli, Alex Cloninger, Gal Mishne" },
]
description = "Low Distortion Local Eigenmaps and its variations."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chiggum/pyLDLE2"
"Bug Tracker" = "https://github.com/chiggum/pyLDLE2/issues"
